--- a/Site/carMeets/frontend/src/app/user/register/register.component.html
+++ b/Site/carMeets/frontend/src/app/user/register/register.component.html
@@ -11,37 +11,37 @@
   </div>
 
   <div class="wrap-input100">
-    <input class="input100" type="text" id="email" formControlName='email'placeholder="E-mailadres">
+    <input class="input100" type="text" id="email" formControlName='email' placeholder="E-mailadres">
     <span class="focus-input100"></span>
     <span class="symbol-input100">
       <i class="fa fa-envelope" aria-hidden="true"></i>
     </span>
   </div>
-  <div class='text-danger' *ngIf='user.get("email").errors?.required && user.get("email").touched'>
-      a email is required
-    </div>
-    <div class='text-danger' *ngIf='!user.get("email").errors?.required && user.get("email").errors?.email && user.get("email").touched'>
-      is not valid
-    </div>
-    <div class='text-danger' *ngIf='user.get("email").errors?.userAlreadyExists && user.get("email").touched'>
-      email already exists
-    </div>
+  <div class='wrap-input100 text-danger font-12 font-12' *ngIf='user.get("email").errors?.required && user.get("email").touched'>
+    E-mailadres is verplicht
+  </div>
+  <div class='wrap-input100 text-danger font-12 font-12' *ngIf='!user.get("email").errors?.required && user.get("email").errors?.email && user.get("email").touched'>
+    Ongeldig E-mailadres
+  </div>
+  <div class='wrap-input100 text-danger font-12 font-12' *ngIf='user.get("email").errors?.userAlreadyExists && user.get("email").touched'>
+    E-mailadres reeds in gebruik
+  </div>
 
-  <div class="wrap-input100"> 
+  <div class="wrap-input100">
     <input class="input100" type="text" id="username" formControlName='username' placeholder="Gebruikersnaam">
     <span class="focus-input100"></span>
     <span class="symbol-input100">
       <i class="far fa-id-card" aria-hidden="true"></i>
     </span>
   </div>
-  <div class='text-danger' *ngIf=' user.get("username").errors?.required && user.get("username").touched'>
-    a username is required
+  <div class='wrap-input100 text-danger font-12 font-12' *ngIf=' user.get("username").errors?.required && user.get("username").touched'>
+    Gebruikersnaam is verplicht
   </div>
-  <div class='text-danger' *ngIf='user.get("username").errors?.minlength && user.get("username").touched'>
-    the username should be at least {{user.get("username").errors?.minlength.requiredLength }} letters
+  <div class='wrap-input100 text-danger font-12 font-12' *ngIf='user.get("username").errors?.minlength && user.get("username").touched'>
+    Gebruikersnaam moet minstens {{user.get("username").errors?.minlength.requiredLength }} characters zijn
   </div>
-  <div class='text-danger' *ngIf='user.get("username").errors?.userAlreadyExists && user.get("username").touched'>
-    a user with that name already exists
+  <div class='wrap-input100 text-danger font-12 font-12' *ngIf='user.get("username").errors?.userAlreadyExists && user.get("username").touched'>
+    Gebruikersnaam reeds in gebruik
   </div>
 
   <div formGroupName='passwordGroup'>
@@ -52,8 +52,8 @@
         <i class="fa fa-lock" aria-hidden="true"></i>
       </span>
     </div>
-    <div class='text-danger' *ngIf='passwordControl.errors?.passwordTooShort && passwordControl.touched'>
-      password too short, please use at least {{passwordControl.errors?.passwordTooShort.requiredLength}} letters (got {{passwordControl.errors?.passwordTooShort.actualLength}})
+    <div class='wrap-input100 text-danger font-12 font-12' *ngIf='passwordControl.errors?.passwordTooShort && passwordControl.touched'>
+      Wachtwoord moet minstens {{passwordControl.errors?.passwordTooShort.requiredLength}} characters zijn.
     </div>
 
 
@@ -64,11 +64,11 @@
         <i class="fa fa-lock" aria-hidden="true"></i>
       </span>
     </div>
-    <div class='text-danger' *ngIf=' user.get("passwordGroup").errors?.passwordsDiffer && user.get("passwordGroup").get("confirmPassword").touched  && user.get("passwordGroup").get("password").touched'>
-      the two passwords should be the same
+    <div class='wrap-input100 text-danger font-12 font-12' *ngIf=' user.get("passwordGroup").errors?.passwordsDiffer && user.get("passwordGroup").get("confirmPassword").touched  && user.get("passwordGroup").get("password").touched'>
+      Wachtwoorden komen niet overeen
     </div>
   </div>
-  
+
 
   <div class="container-register100-form-btn">
     <button type='submit' [disabled]='!user.valid' class="register100-form-btn">
