--- a/Site/carMeets/frontend/src/app/meeting/meeting.component.html
+++ b/Site/carMeets/frontend/src/app/meeting/meeting.component.html
@@ -22,37 +22,31 @@
   <div class="col-lg-3 visible-lg text-right">
     <p class="mb-5">Categoriën:</p>
     <div dir="rtl">
-    <li *ngFor="let categorie of meeting.categories">
-      <app-category [name]="categorie"></app-category>
-    </li>
-  </div>
+      <li *ngFor="let categorie of meeting.categories">
+        <app-category [name]="categorie"></app-category>
+      </li>
+    </div>
     <br>
     <br>
-    <a href="#" class="far fa-heart mr-20"> {{meeting.likeAmount}}</a>
-    <a href="#" class="far fa-comment"> {{meeting.commentAmount}}</a>
+    <a href="#">
+      <i class="far fa-heart"></i> {{meeting.likeAmount}}</a>
+    <a href="#">
+      <i class="far fa-heart"></i> {{meeting.commentAmount}}</a>
     <br>
     <a [routerLink]="['/meet-detail', meeting?.id]" class="button big mt-10">Meer info</a>
   </div>
-  <div class="col-lg-4 text-right hidden-lg">
-    <footer>
-      <ul class="actions">
-        <li>
-          <a href="#" class="button big">Lees verder</a>
-        </li>
-      </ul>
-      <ul class="stats">
-        <a class="no-hover">
-          <li class="" *ngFor="let categorie of meeting.categories">
-            <app-category [name]="categorie"></app-category>
-          </li>
-        </a>
-        <li>
-          <a href="#" class="icon fa-heart">{{meeting.likeAmount}}</a>
-        </li>
-        <li>
-          <a href="#" class="icon fa-comment">{{meeting.commentAmount}}</a>
-        </li>
-      </ul>
+  <div class="hidden-lg">
+    <footer class="col-sm-9">
+      <div class="">
+          <a [routerLink]="['/meet-detail', meeting?.id]" class="button big mb-15">Meer info</a>
+      </div>
+      <div class="force-right">
+          <a href="#">
+              <i class="far fa-heart"></i> {{meeting.likeAmount}}</a>
+            <a href="#" class="pr-20">
+              <i class="far fa-heart"></i> {{meeting.commentAmount}}</a>
+      </div>
+      
     </footer>
   </div>
 </article>
