--- a/Site/carMeets/frontend/src/styles.css
+++ b/Site/carMeets/frontend/src/styles.css
@@ -1,6 +1,19 @@
 @import url(assets/css/font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
 /* Custom */
+.force-right {
+  right: 0;
+  position: absolute;
+}
+
+.navbar-toggle .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  background-color: #e8175d !important;
+  border-radius: 1px;
+}
+
 @media screen and (max-width: 1200px) {
   .post {
     position: relative;
@@ -1742,6 +1755,7 @@ dl dd {
     padding: 0;
     text-align: left;
     width: 100%;
+    min-width: 10em;
   }
   .post > header .meta > * {
     border-left: solid 1px rgba(160, 160, 160, 0.3);
