--- a/Site/carMeets/frontend/src/styles.css
+++ b/Site/carMeets/frontend/src/styles.css
@@ -1,5 +1,7 @@
 @import url(assets/css/font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
+
+/*---------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* Custom */
 .force-right {
   right: 0;
@@ -53,7 +55,9 @@
   margin-bottom: 55px;
   border-bottom: solid 2px rgba(160, 160, 160, 0.3);
 }
-
+/* einde Custom */
+/*---------------------------------------------------------------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* Custom colors */
 
 .color-dark-black {
@@ -76,6 +80,10 @@
   color: #a8a7a7;
 }
 
+/* einde Custom colors */
+/*---------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/*---------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* Custom font sizes */
 
 .font-10 {
