changepassword begin -> backend errors?

--- a/Site/carMeets/frontend/src/app/user/account-page/account-submenu/account-submenu.component.html
+++ b/Site/carMeets/frontend/src/app/user/account-page/account-submenu/account-submenu.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-4">
-  <div class="well">
+  <div class="well center-block">
     <ul class="nav nav-list">
       <li>
         <a routerLinkActive='color-dark-red' routerLink="/account/instellingen">
