--- a/Site/carMeets/frontend/src/app/user/register-page/register/register.component.css
+++ b/Site/carMeets/frontend/src/app/user/register-page/register/register.component.css
@@ -1,4 +1,14 @@
-  /*//////////////////////////////////////////////////////////////////
+/* CUSTOM */
+button:disabled,
+button[disabled] {
+  color: #3c3b3b !important;
+  opacity: 0.5;
+  cursor: not-allowed !important;
+} 
+/*---------------------------------------------*/
+/*---------------------------------------------*/
+ 
+ /*//////////////////////////////////////////////////////////////////
   [ RESTYLE TAG ]*/
   
   * {
