--- a/Site/carMeets/frontend/src/app/user/register-page/register/register.component.html
+++ b/Site/carMeets/frontend/src/app/user/register-page/register/register.component.html
@@ -70,7 +70,7 @@
   </div>
 
 
-  <div class="container-register100-form-btn">
+  <div class="container-register100-form-btn" [ngClass]="{'not-allowed-force':!user.valid}">
     <button type='submit' [disabled]='!user.valid' class="register100-form-btn">
       Registreer
     </button>
