html voor instellingen van account is klaar met formbuilder checks etc

--- a/Site/carMeets/frontend/src/app/user/account-page/account-settings/account-settings-emailchange/account-settings-emailchange.component.css
+++ b/Site/carMeets/frontend/src/app/user/account-page/account-settings/account-settings-emailchange/account-settings-emailchange.component.css
@@ -1,6 +1,6 @@
 /*---------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* CUSTOM  */
-.UsernameChangeSection * .input100Max300px {
+.EmailChangeSection * .input100Max300px {
     max-width: 300px !important;
   }
   
