--- a/Site/carMeets/frontend/src/app/user/account-page/account-settings/account-settings.component.html
+++ b/Site/carMeets/frontend/src/app/user/account-page/account-settings/account-settings.component.html
@@ -5,4 +5,11 @@
 
     <hr class="cleanPinkSeperator">
 
+    <app-account-settings-usernamechange></app-account-settings-usernamechange>
+
+    <hr class="cleanPinkSeperator">
+
+    <app-account-settings-emailchange></app-account-settings-emailchange>
+
+
 </div>
