--- a/Site/carMeets/frontend/src/app/user/register-page/register/register.component.html
+++ b/Site/carMeets/frontend/src/app/user/register-page/register/register.component.html
@@ -11,7 +11,7 @@
 
   <div *ngIf='errorMsg' class="text-center text-danger">{{errorMsg}}</div>
   <div class="wrap-input100">
-    <input class="input100" type="text" id="email" formControlName='email' placeholder="E-mailadres">
+    <input class="input100" type="email" id="email" formControlName='email' placeholder="E-mailadres">
     <span class="focus-input100"></span>
     <span class="symbol-input100">
       <i class="fa fa-envelope" aria-hidden="true"></i>
