account settings works hardcoded
gebruiker kan ww, username en email wijzigen alsook houd token enkel role, username en userid bij wat denk ik aan alle wetgevingen voldoet. angezien userid niet wordt meegeven omdat ik dit wil kunnen bepalen adhv de backend zijn token userid kunnen bepalen voor optimale beveiliging

--- a/Site/carMeets/frontend/src/app/user/account-page/account-settings/account-settings-emailchange/account-settings-emailchange.component.html
+++ b/Site/carMeets/frontend/src/app/user/account-page/account-settings/account-settings-emailchange/account-settings-emailchange.component.html
@@ -1,5 +1,6 @@
 <section class="EmailChangeSection text-center">
   <h3>E-mailadres wijzigen</h3>
+  <div *ngIf='emailMessage' class="text-center text-danger">{{emailMessage}}</div>
   <form [formGroup]='changeEmailFormgroup' (ngSubmit)='onSubmitEmailChange()'>
 
     <div class="wrap-input100 input100Max300px center-block">
