add meeting shortcut navbar

--- a/Site/carMeets/frontend/src/app/layout/navbar/navbar.component.html
+++ b/Site/carMeets/frontend/src/app/layout/navbar/navbar.component.html
@@ -18,6 +18,7 @@
               </a>
               <ul class="dropdown-menu">
                   <li><a routerLink="/account" href="#"><i class="fas fa-cogs"> </i> Uw account</a></li>
+                  <li><a routerLink="/meetingToevoegen" href="#"><i class="fas fa-plus"> </i> Meeting toevoegen</a></li>
                   <li><a routerLink="/logout"><i class="fas fa-sign-out-alt"></i> Afmelden</a></li>
               </ul>
         </li>
