--- a/Site/carMeets/frontend/src/app/meeting/meeting.component.html
+++ b/Site/carMeets/frontend/src/app/meeting/meeting.component.html
@@ -22,7 +22,7 @@
   <div class="col-lg-3 visible-lg text-right">
     <p class="mb-5">Categoriën:</p>
     <div dir="rtl">
-      <li *ngFor="let categorie of meeting.categories">
+      <li *ngFor="let categorie of drieCategorien">
         <app-category [name]="categorie"></app-category>
       </li>
     </div>
