layout + opslaan nieuwe preferences werkt

--- a/Site/carMeets/frontend/src/app/user/account-page/add-meeting-page/add-meeting-page.component.html
+++ b/Site/carMeets/frontend/src/app/user/account-page/add-meeting-page/add-meeting-page.component.html
@@ -128,7 +128,7 @@
         </label>
       </div>
 
-      <div class="input100Max600px center-block">
+      <div class="input100Max600px center-block text-left">
         <h4>Kies alle passende categorieën*</h4>
         <div *ngIf='categoryErrorMsg != ""' class="text-center text-danger">{{categoryErrorMsg}}</div>
         <div *ngFor="let keuze of soortenMeetings">
