--- a/Site/carMeets/frontend/src/app/layout/navbar/navbar.component.html
+++ b/Site/carMeets/frontend/src/app/layout/navbar/navbar.component.html
@@ -17,8 +17,9 @@
                 <span class="glyphicon glyphicon-user"></span> {{currentUser|async}} <i class="far fa-caret-square-down color-dark-red"></i>
               </a>
               <ul class="dropdown-menu">
-                  <li><a routerLink="/account" href="#"><i class="fas fa-cogs"> </i> Uw account</a></li>
-                  <li><a routerLink="/meetingToevoegen" href="#"><i class="fas fa-plus"> </i> Meeting toevoegen</a></li>
+                  <li><a routerLink="/account"><i class="fas fa-cogs"> </i> Uw account</a></li>
+                  <li><a routerLink="/account/voorkeuren"><i class="fas fa-eye"></i> Voorkeuren</a></li>
+                  <li><a routerLink="/meetingToevoegen"><i class="fas fa-plus"> </i> Meeting toevoegen</a></li>
                   <li><a routerLink="/logout"><i class="fas fa-sign-out-alt"></i> Afmelden</a></li>
               </ul>
         </li>
