kleine grafische vebeteringen +  voorzien van enkele dummy data afbeeldingen

--- a/Site/carMeets/frontend/src/app/user/account-page/add-meeting-page/add-meeting-page.component.html
+++ b/Site/carMeets/frontend/src/app/user/account-page/add-meeting-page/add-meeting-page.component.html
@@ -100,10 +100,10 @@
         </span>
       </div>
       <div class='wrap-input100 text-danger font-12 font-12' *ngIf='newMeetingFormGroup.get("fullDescription").touched && newMeetingFormGroup.get("fullDescription").errors?.required'>
-        Een Uitgebreide beschrijving is verplicht.
+        Een uitgebreide beschrijving is verplicht.
       </div>
       <div class='wrap-input100 text-danger font-12 font-12' *ngIf='newMeetingFormGroup.get("fullDescription").touched && newMeetingFormGroup.get("fullDescription").errors?.maxlength'>
-        De maximale lengte voor een korte beschrijving is 1500 characters.
+        De maximale lengte voor een uitgebreide beschrijving is 1500 characters.
       </div>
 
       <div class="wrap-input100 input100Max600px center-block">
