--- a/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
+++ b/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
@@ -15,7 +15,7 @@
       </div>
     </div>
   </header>
-  <img class="mb-15" src="{{singleMeeting.imagePath}}" alt="" />
+  <img class="mb-15 image featured" src="{{singleMeeting.imagePath}}" alt="" />
   <p>{{singleMeeting.fullDescription}}</p>
   <a href="#" class="far fa-heart">{{singleMeeting.likeAmount}}</a>
 </article>
