visuele voorbereidingen "like en going"

--- a/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
+++ b/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
@@ -17,5 +17,8 @@
   </header>
   <img class="mb-15 image featured" src="{{singleMeeting.imagePath}}" alt="" />
   <p>{{singleMeeting.fullDescription}}</p>
-  <a href="#" class="far fa-heart">{{singleMeeting.likeAmount}}</a>
+  <a title="Vind ik leuk!">
+    <i class="far fa-heart"></i> {{singleMeeting.likeAmount}}</a>
+  <a title="Daar ga ik heen!">
+    <i class="far fa-check-circle"></i> {{singleMeeting.goingAmount}}</a>
 </article>
