visueel volledig af
wanneer liked wordt dit visueel aangeduid, zelfde voor going

--- a/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
+++ b/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
@@ -2,7 +2,7 @@
   <header>
     <div class="title">
       <h2>
-          <a (click)="onClickLike()" class="far fa-heart"></a>
+          <a [ngClass]="{'color-dark-red': hasLiked}" (click)="onClickLike()" class="far fa-heart clickable-force"></a>
         <a class="no-hover">{{singleMeeting.name}}</a>
       </h2>
       <p>{{singleMeeting.shortDescription}}</p>
@@ -18,7 +18,7 @@
   <img class="mb-15 image featured" src="{{singleMeeting.imagePath}}" alt="" />
   <p>{{singleMeeting.fullDescription}}</p>
   <a (click)="onClickLike()" title="Vind ik leuk!">
-    <i class="far fa-heart"></i> {{likeAmount}}</a>
+    <i class="far fa-heart" [ngClass]="{'color-dark-red': hasLiked}"></i> {{likeAmount}}</a>
   <a (click)="onClickGoing()" title="Daar ga ik heen!">
-    <i class="far fa-check-circle"></i> {{goingAmount}}</a>
+    <i class="far fa-check-circle" [ngClass]="{'color-dark-red': isGoing}"></i> {{goingAmount}}</a>
 </article>
